k8s/dev/admin-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-web
spec:
  selector:
    app: admin-web
  ports:
    - port: 80
      targetPort: 80
